# api_server/swagger_server/controllers/ErrorApiResponse.py
@@ -42,3 +42,12 @@ def NoUsernameError(type='user'):
 
 def UserNotFoundError(type='user'):
     return ApiResponse(code=1008, type=type, message='User not found')
+
+
+def EmployeeEmailExistError(email: str, type='employee'):
+    return ApiResponse(code=1009, type=type,
+                       message='Employee with email \'{}\' already exists'.format(email))
+
+
+def EmployeeNotFoundError(id: int, email: str, type='employee'):
+    return ApiResponse(code=1010, type=type, message='Employee not found, id: \'{}\', email: \'{}\''.format(id, email))
