# api_server/swagger_server/controllers/employee_controller_impl.py
@@ -1,10 +1,10 @@
-import connexion
 import six
 
-from flask import jsonify
+import connexion
+import swagger_server.controllers.ErrorApiResponse as ErrorApiResponse
+from swagger_server import db, util
 from swagger_server.models.api_response import ApiResponse  # noqa: E501
 from swagger_server.models.employee import Employee  # noqa: E501
-from swagger_server import util, db
 from swagger_server.orm import Employee as Employee_orm
 
 
@@ -20,7 +20,19 @@ def add_employee(body):  # noqa: E501
     """
     if connexion.request.is_json:
         body = Employee.from_dict(connexion.request.get_json())  # noqa: E501
-    return 'do some magic!'
+    orm = Employee_orm(full_name=body.full_name, position=body.position,
+                       specialization=body.specialization if body.specialization else '',
+                       team_number=body.team_number, expert=body.expert, email=body.email)
+    # check email already exists
+    found = Employee_orm.query.filter_by(email=body.email).one_or_none()
+    if found is not None:
+        return ErrorApiResponse.EmployeeEmailExistError(body.email), 409
+    try:
+        db.session.add(orm)
+        db.session.commit()
+        return find_employees_by_email(body.email)
+    except Exception as ex:
+        return ErrorApiResponse.InternalServerError(ex, type='Employee'), 500
 
 
 def delete_employee(employeeId):  # noqa: E501
@@ -61,6 +73,22 @@ def find_employees_by(full_name=None, team_number=None):  # noqa: E501
     :rtype: List[Employee]
     """
     return 'do some magic!'
+
+
+def find_employees_by_email(email):  # noqa: E501
+    """Finds Employee by given email
+
+     # noqa: E501
+
+    :param email: Unique employee email
+    :type email: str
+
+    :rtype: Employee
+    """
+    found = Employee_orm.query.filter_by(email=email).one_or_none()
+    if found is None:
+        return ErrorApiResponse.EmployeeNotFoundError(email = email), 404
+    return to_employee_dto(found)
 
 
 def get_employee_by_id(employeeId):  # noqa: E501
